Fixed overflow bug

--- a/app/src/main/res/css/modules/column.sass
+++ b/app/src/main/res/css/modules/column.sass
@@ -33,6 +33,7 @@
   overflow: hidden
   margin: 0 1rem
   .items_container
+    overflow-x: hidden
     overflow-y: scroll
     transform: translateZ(0)
     -webkit-transform: translateZ(0)
